--- a/GymManagementSystem/main/templates/base.html
+++ b/GymManagementSystem/main/templates/base.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-icons/font/bootstrap-icons.css' %}" />
     <!-- jquery -->
     <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
-    <title>Home - GymManagementSystem</title>
+    <title>Re1gns Gym</title>
   </head>
   <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #26547C;">
 	  <div class="container">
-	    <a class="navbar-brand" href="{% url 'home' %}">{{logo}}  Re1gns GMS</a>
+	    <a class="navbar-brand" href="{% url 'home' %}">RE1GNS {{logo}}</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
