--- a/GymManagementSystem/main/templates/page.html
+++ b/GymManagementSystem/main/templates/page.html
@@ -5,7 +5,7 @@
     <!-- Services -->
     <section class="container my-4">
         <h1 class="text-center mb-4 section-heading border-bottom pb-2">{{page.title}}</h1>
-        <p>{{page.detail}}</p>
+        <p>{{page.detail|safe}}</p>
     </section>
     <!-- End -->
 </main>  
