--- a/GymManagementSystem/main/templates/services.html
+++ b/GymManagementSystem/main/templates/services.html
@@ -1,17 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
 <!-- Main Start -->
-<main>
-    <!-- Services -->
-    <section class="container my-4">
-        <!-- services_detail.html -->
-        <h1>{{ service_details.title }}</h1>
-        <img src="{{ service_details.img.url }}" alt="{{ service_details.title }}">
-        <p>{{ service_details.details }}</p>
+<main class="container my-4">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>{{ service_details.title }}</h1>
+            <!-- Image on the left -->
+            <img src="{{ service_details.img.url }}" alt="{{ service_details.title }}" class="img-fluid">
+        </div>
+        <div class="col-md-6">
+            <!-- Title centered -->
+            
+            <!-- Details start beside the image and extend to the base -->
+            <p>{{ service_details.details }}</p>
+        </div>
+    </div>
+</main>
 
-    </section>
-    <!-- End -->
-</main>  
+
 
 <script type="text/javascript" src="assets/lightbox2-2.11.3/dist/js/lightbox.min.js"></script>
 <link rel="stylesheet" type="text/css" href="assets/lightbox2-2.11.3/dist/css/lightbox.min.css" />
