--- a/GymManagementSystem/main/templates/trainer/dashboard.html
+++ b/GymManagementSystem/main/templates/trainer/dashboard.html
@@ -2,22 +2,25 @@
 {% block content %}
     <!-- Main Start -->
     <main>
-		<!-- Services -->
-		<section class="container my-4">
-			<div class="row">
+        <!-- Services -->
+        <section class="container my-4">
+            <div class="row">
                 <div class="col-3">
                     {% include 'trainer/left_sidebar.html' %}
                 </div>
                 <div class="col-9">
                     <h3 class="mb-4 border-bottom pb-1">Trainer Dashboard</h3>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-9">
+                            <!-- Include the trainer details template -->
+                            {% include 'trainer/trainer_details.html' with trainer=trainer %}
                         </div>
+                        <!-- Other content for the trainer dashboard can be added here -->
                     </div>
                 </div>
             </div>
-		</section>
-		<!-- End -->
+        </section>
+        <!-- End -->
     </main>
     <!-- End -->
 {% endblock %}
