--- a/GymManagementSystem/main/templates/user/left_sidebar.html
+++ b/GymManagementSystem/main/templates/user/left_sidebar.html
@@ -1,8 +1,7 @@
 <div class="list-group">
     <a href="{% url 'user_dashboard' %}" class="list-group-item {% if request.path == '/user/dashboard' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Dashboard</a>
     <a href="{% url 'update_profile' %}" class="list-group-item {% if request.path == '/user/edit_profile' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Edit Profile</a>
-    <a href="{% url 'password_change' %}" class="list-group-item {% if request.path == '/accounts/password_change/' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Change Password</a>
-    <a href="{% url 'notification' %}" class="list-group-item {% if request.path == '/notification' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Notifications<span class="float-end badge bg-danger mt-1">{{TotalUnread}}</span></a>
-    <a href="#" class="list-group-item {% if request.path == '' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Messages</a>
+    <a href="{% url 'change_password' %}" class="list-group-item {% if request.path == '/change_password' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Change Password</a>
+    <a href="{% url 'notification' %}" class="list-group-item {% if request.path == '/notification' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Notifications <span class="float-end badge bg-danger mt-1">{{TotalUnread}}</span><i class="bi bi-bell"></i></a>
     <a href="{% url 'report_a_trainer' %}" class="list-group-item {% if request.path == '/report_a_trainer' %} active {% endif %}"><i class="bi bi-chevron-double-right float-left me-4 text-white"></i>Report A Trainer </a>
 </div>
